# axum-workout-api

./: .ai-rules.md  .gitignore  Cargo.toml  README.md
.sqlx/: query-01a1a98b6624169afbe234c32cd869325cb3afb8e53ecee7e5873149cb4e1823.json  query-0247252b23c226a83cb7cf0d8301be6fb246b2416463b7822dc7fc957c7ecd36.json  query-0574f9a43e0317cd4c6ba2ccb1779cfdfcfdbe0ea2a40caa6817608cff3ba52c.json  query-0f298ab92781f52b56232c2e61d58dc3d376d2ff80894048e57a4762eafe3115.json  query-16a68088d7f113717def90770169773f4b9fd9871470896c8d03cf20b4d28de5.json  query-35d9afbfe529d76ef17bc05f683102a0442f017bce5216a66a9ccd236271888e.json  query-3b94e4a0aafb7fcab3a5fd99051c591166e8d4113a207bdfa70511278c93df7d.json  query-3d1012d0edc556e3274539d02163622883acfbf61fe561ea9c4a08dc0fdb1c89.json  query-3db35e3df40ecb0e54604a89ec0da0149582dfc6ee0a5a495c83d453919a7f31.json  query-3e7263f2959db907d53851d16b365fd31936c1a7674ece9d68e6f69491ad3881.json  query-43c6c4a5ce483b2cae59bcd95f3b0d27d1dc2a9094b28de8115ceb49cd0f22a4.json  query-53e91e0a54af4adbc887bdd8a3572adb6a5d8fe51f95416c11f43bce901f6f17.json  query-662261c65a97151c5423c467b2030fabff896d77df1a9cc888a0ce6b9c91dfc1.json  query-707049805fd1a4165904d8e969c676309dad13998658ecad357d830f6a4c0ab2.json  query-7f0c612d493f444a4caeac6efd46da0582e09491fa4a7e66754b15d98532f8fb.json  query-8ce9fff10fc95e30b42a0ea2ea168bb657838469c287193c643f06c9831ebfff.json  query-9578d84777a4cf27f02542a7c89a42a72573086dfc23050fe6936f662bcfd42d.json  query-a4589aa0f8e029b6aa5f82fd03aedb796ea4730d7e74ac03c68bce58be5a249a.json  (+13 more)
examples/: auth_demo.rs
src/: lib.rs  main.rs
(+29 files in other folders)
