[package]
name = "axum-workout-api"
version = "0.1.0"
edition = "2024"

[lib]
name = "axum_workout_api"
path = "src/lib.rs"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "uuid",
    "migrate",
    "macros",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
bcrypt = "0.15"
jsonwebtoken = "9.2"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
axum-extra = { version = "0.10", features = ["typed-header"] }


[dev-dependencies]
tokio-test = "0.4"
